Adds registering flow
