# docs/swagger.yaml
@@ -10,6 +10,15 @@ definitions:
       year:
         type: integer
     type: object
+  internal_api.APIUser:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
@@ -64,4 +73,69 @@ paths:
       summary: Get a movie
       tags:
       - movies
+  /users/register:
+    post:
+      consumes:
+      - application/json
+      description: Registers a new user with the provided username, email, and password.
+      parameters:
+      - description: User to register
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/internal_api.APIUser'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Successfully registered the user
+          schema:
+            type: string
+        "400":
+          description: Invalid request parameters
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Register a new user
+      tags:
+      - users
+  /verify:
+    get:
+      consumes:
+      - application/json
+      description: Verifies a user using base64 URL encoded email and verification
+        code.
+      parameters:
+      - description: Base64 URL Encoded Email
+        in: query
+        name: email
+        required: true
+        type: string
+      - description: Base64 URL Encoded Verification Code
+        in: query
+        name: code
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User verified successfully
+          schema:
+            type: string
+        "400":
+          description: Invalid email or code
+          schema:
+            type: string
+        "500":
+          description: Verification failed
+          schema:
+            type: string
+      summary: Verify user
+      tags:
+      - verification
 swagger: "2.0"
